--- a/I can write/index.html
+++ b/I can write/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>what?</title>
-	<link rel="stylesheet" type="text/css" href="D:\Webpages\I can write\canwrite.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<div class="content">
