--- a/Hospital Dashboard/index.html
+++ b/Hospital Dashboard/index.html
@@ -70,7 +70,7 @@
             </section>
         </div>
         <div class="chartbox">
-            <canvas class="chart" id="myChart"></canvas> <!-- Set width and height attributes -->
+            <canvas class="chart" id="myChart"></canvas>
         </div>         
     </div>
     <script src="script.js"></script>
