--- a/Shoplify/index.html
+++ b/Shoplify/index.html
@@ -23,7 +23,7 @@
                 <li><a class="three">Contact</a></li>
                 <li><a class="four" href="#about">About</a></li>
                 <li><input type="text" name="search" class="search"></li>
-                <button class="searchbtn"><img class="searchimg" src="search.png"></button>
+                <button class="searchbtn"><img class="searchimg" src="Shoplify/images/search.png"></button>
               </ul>
         </div>
     </div>
@@ -32,19 +32,19 @@
             <section class="slice1">
                 <p class="TREASURED">TREASURED</p>
                 <p class="ADORNMENTS">ADORNMENTS.</p>
-                <img src="jewelry.png" class="necklace">
+                <img src="Shoplify/images/jewelry.png" class="necklace">
             </section>
         </a>
         <a href="clothing.html">
             <section class="slice2">
-                <img src="dress.png" class="dress">
+                <img src="Shoplify/images/dress.png" class="dress">
                 <p class="ELEVATE">ELEVATE</p>
                 <p class="EVERYDAY">YOUR EVERYDAY.</p>
             </section>
         </a>
         <a href="heels.html">
             <section class="slice3">
-                <img src="heels.png" class="heels">
+                <img src="Shoplify/images/heels.png" class="heels">
                 <p class="CONFIDENCE">CONFIDENCE</p>
                 <p class="TAKES">TAKES A STEP.</p>
             </section>
