--- a/Shoplify/clothing.html
+++ b/Shoplify/clothing.html
@@ -11,35 +11,35 @@
     <p class="categories">YOUR STYLE, YOUR STORY.</p>
     <section>
         <div class="dress1">
-            <img src="dress1.png" class="dress1img">
+            <img src="Shoplify/images/dress1.png" class="dress1img">
             <p class="dress1txt">DRESSES</p>
         </div>
         <div class="dress2">
-            <img src="dress2.png" class="dress2img">
+            <img src="Shoplify/images/dress2.png" class="dress2img">
             <p class="dress2txt">T-SHIRTS</p>
         </div>
         <div class="dress3">
-            <img src="dress3.png" class="dress3img">
+            <img src="Shoplify/images/dress3.png" class="dress3img">
             <p class="dress3txt">TROUSERS</p>
         </div>
         <div class="dress4">
-            <img src="dress4.png" class="dress4img">
+            <img src="Shoplify/images/dress4.png" class="dress4img">
             <p class="dress4txt">SWIMWEARS</p>
         </div>
         <div class="dress5">
-            <img src="dress5.png" class="dress5img">
+            <img src="Shoplify/images/dress5.png" class="dress5img">
             <p class="dress5txt">SKIRTS</p>
         </div> 
         <div class="dress6">
-            <img src="dress6.png" class="dress6img">
+            <img src="Shoplify/images/dress6.png" class="dress6img">
             <p class="dress6txt">FORMALS</p>
         </div>
         <div class="dress7">
-            <img src="dress7.png" class="dress7img">
+            <img src="Shoplify/images/dress7.png" class="dress7img">
             <p class="dress7txt">LONG DRESSES</p>
         </div>
         <div class="dress8">
-            <img src="dress8.png" class="dress8img">
+            <img src="Shoplify/images/dress8.png" class="dress8img">
             <p class="dress8txt">CUSTOMIZED</p>
         </div>
     </section>
