--- a/Shoplify/heels.html
+++ b/Shoplify/heels.html
@@ -11,27 +11,27 @@
     <section>
         <p class="LEAVE">LEAVE YOUR MARK.</p>
         <div class="heel1" style="clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);">
-            <img src="heel1.png" class="heel1img">
+            <img src="Shoplify/images/heel1.png" class="heel1img">
             <p class="heel1txt">HEELS</p>
         </div>
         <div class="heel2" style="clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);">
-            <img src="heel2.png" class="heel2img">
+            <img src="Shoplify/images/heel2.png" class="heel2img">
             <p class="heel2txt">SHOES</p>
         </div>
         <div class="heel3" style="clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);">
-            <img src="heel3.png" class="heel3img">
+            <img src="Shoplify/images/heel3.png" class="heel3img">
             <p class="heel3txt">SKATING SHOES</p>
         </div>
         <div class="heel4" style="clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);">
-            <img src="heel4.png" class="heel4img">
+            <img src="Shoplify/images/heel4.png" class="heel4img">
             <p class="heel4txt">FLIP-FLOPS</p>
         </div>
         <div class="heel5" style="clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);">
-            <img src="heel5.png" class="heel5img">
+            <img src="Shoplify/images/heel5.png" class="heel5img">
             <p class="heel5txt">BALLET SHOES</p>
         </div>
         <div class="heel6" style="clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);">
-            <img src="heel6.png" class="heel6img">
+            <img src="Shoplify/images/heel6.png" class="heel6img">
             <p class="heel6txt">BOOTS</p>
         </div>
     </section>
