--- a/Shoplify/jewellery.html
+++ b/Shoplify/jewellery.html
@@ -11,27 +11,27 @@
     <section>
         <p class="TIMELESS">TIMELESS TREASURES.</p>
         <div class="j1">
-            <img src="j1img.png" class="j1img">
+            <img src="Shoplify/images/j1img.png" class="j1img">
             <p class="j1txt">BRACELETS</p>
         </div>
         <div class="j2">
-            <img src="j2img.png" class="j2img">
+            <img src="Shoplify/images/j2img.png" class="j2img">
             <p class="j2txt">EARRINGS</p>
         </div>
         <div class="j3">
-            <img src="j3img.png" class="j3img">
+            <img src="Shoplify/images/j3img.png" class="j3img">
             <p class="j3txt">RINGS</p>
         </div>
         <div class="j4">
-            <img src="j4img.png" class="j4img">
+            <img src="Shoplify/images/j4img.png" class="j4img">
             <p class="j4txt">NECKLACES</p>
         </div>
         <div class="j5">
-            <img src="j5img.png" class="j5img">
+            <img src="Shoplify/images/j5img.png" class="j5img">
             <p class="j5txt">BROOCHES</p>
         </div>
         <div class="j6">
-            <img src="j6img.png" class="j6img">
+            <img src="Shoplify/images/j6img.png" class="j6img">
             <p class="j6txt">TIARAS</p>
         </div>
     </section>
