--- a/Shoplify/start.html
+++ b/Shoplify/start.html
@@ -16,13 +16,13 @@
             <a href="index.html" class="login">Log In</a>
         </div>
     </section>
-    <img src="online-shopping.png" alt="online-shopping" class="logo">
+    <img src="Shoplify/images/online-shopping.png" alt="online-shopping" class="logo">
     <footer>
         <ul class="bottom">
             <li class="follow">Follow us</li>
-            <li><img src="twitter.png" alt="twitter" class="twitter"></li>
-            <li><img src="instagram.png" alt="instagram" class="instagram">instagram</li>
-            <li><img src="send.png" alt="send" class="send"></li>
+            <li><img src="Shoplify/images/twitter.png" alt="twitter" class="twitter"></li>
+            <li><img src="Shoplify/images/instagram.png" alt="instagram" class="instagram">instagram</li>
+            <li><img src="Shoplify/images/send.png" alt="send" class="send"></li>
         </ul>
     </footer>
     <div class="cr">2024 SHOPLIFY INDIA</div>
